# RAG-based-Assistant

./: .env_example  .gitignore  README.md  app.py  pyproject.toml  ragas_eval.py  ragas_score.py  requirements.txt  test-cases.txt
RAGAS-dataset/: eval-dataset-final.csv  eval-dataset.csv  eval-score.csv
data/vectors/: index.faiss  index.pkl
modules/: _dependency_sequence.md  bm25_retriever.py  chatbot_response.py  conversation_history.py  decide_query_complexity.py  language_model.py  multi_hop_retriever.py  multi_query_retriever.py  nltk_tokenizer_download.py  preprocess_documents.py  rrf_score.py  semantic_retriever.py
outputs/: output-demo.md
prompts/: decide_query_complexity.md  mainRAG-prompt-eval.md  mainRAG-prompt.md  multiQuery-prompt.md  multihop-prompt.md
